test/integration/httproute-listener-isolation/manifests/1-route-attaches-to-empty-hostname/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-attaches-to-empty-hostname
spec:
  parentRefs:
  - name: gateway
    sectionName: empty-hostname
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /empty-hostname
    backendRefs:
    - name: http-echo
      port: 80
